--- a/XOR_NN_keras.ipynb
+++ b/XOR_NN_keras.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOsYQoWubO31GKEobBuQD24",
+      "authorship_tag": "ABX9TyP1J0/ljuChzIH4VedPWN1v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 4,
       "metadata": {
         "id": "fnzmmJ8pCaBU"
       },
@@ -38,6 +38,7 @@
         "import tensorflow as tf\n",
         "import matplotlib.pyplot as plt\n",
         "from tensorflow.keras.models import Model\n",
+        "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import Layer\n",
         "from tensorflow.keras.layers import Dense\n",
         "from tensorflow.keras.optimizers import Adam"
@@ -52,7 +53,7 @@
       "metadata": {
         "id": "Rcb16RYwDGZC"
       },
-      "execution_count": 49,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -65,7 +66,7 @@
       "metadata": {
         "id": "KktK8MDuF_vI"
       },
-      "execution_count": 50,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -80,7 +81,7 @@
         "id": "O-IMdVMtKSun",
         "outputId": "1bce86b5-258a-4958-fdd1-47e392adb278"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +114,7 @@
       "metadata": {
         "id": "TCg6OuQAGKyD"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -122,7 +123,7 @@
       "metadata": {
         "id": "nePXiDIcKAif"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +138,7 @@
         "id": "K18gilREGW4C",
         "outputId": "52ed1640-ea6d-4c25-dd42-ffc9098d84b5"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -559,7 +560,7 @@
         "id": "8TfnrIbYHPui",
         "outputId": "bebbcef1-d0e7-4e21-c612-836c8d253e37"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -597,7 +598,7 @@
       "metadata": {
         "id": "mt9Y3kgGJVkc"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -613,7 +614,7 @@
         "id": "mumwYL3XMTPa",
         "outputId": "0ec19044-ea7b-412e-b00e-e1568e202c0d"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
