--- a/intro.ipynb
+++ b/intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNN+u8WjvIhiSQ83NTFpcAL",
+      "authorship_tag": "ABX9TyNl7xlEOG9So/oqBx9Tr8Lr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,350 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "dn0-qqe5o-ZR"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Let's initialize an array (vector) of 10 elements. These elements are deterimined by random numbers drawn from a normal distribution"
+      ],
+      "metadata": {
+        "id": "vxB8-SpGpMzF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = np.random.normal(size=10)\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MIO9-UgzpH4h",
+        "outputId": "816b7303-5de2-4a6e-c9de-cce98e0dba07"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 1.36914873  2.71735531 -1.1324313  -0.24013894  1.60920806  0.6178349\n",
+            " -0.69430759  1.20980099 -0.53121744 -0.26319006]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mu=10\n",
+        "sigma=0.1\n",
+        "x = np.random.normal(mu, sigma, size=5)\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GW2KypeFrC06",
+        "outputId": "fd465d4d-1925-47a9-e68a-e83b967b3967"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 9.89442984  9.89111276  9.98061688  9.82430114 10.09369888]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#You can also initialize an array with specific values\n",
+        "x = np.array([1.2, 2.6, 3.4])\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GKmjqAucr46v",
+        "outputId": "c2da044a-7a41-4991-d77c-d66e8a1eb262"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1.2 2.6 3.4]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Indexing elements. Note that Python starts numbering elements from 0!\n",
+        "# Get the first element of x\n",
+        "print(x[0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ujRL1ZeXr9Uu",
+        "outputId": "23cfaea3-0f54-4c02-ab64-1c6f7ac19682"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get the last element of x\n",
+        "print(x[-1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iGWUwkYysLYn",
+        "outputId": "8a127e99-e27d-45b8-9cce-338f9eee8cab"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#You can also apply functions like log to an entire array\n",
+        "x=np.log(np.array([1, 4, 7, 8, 10]))\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cu91VU1ZscMe",
+        "outputId": "884a5006-f3e6-417d-f103-bd282c269693"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.         1.38629436 1.94591015 2.07944154 2.30258509]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#We can  make matrices in numpy\n",
+        "A = np.log(np.array([ [4.0, 7.0, 8.0], [3.0, 10.0, 11.0], [4.0, 5.0, 7.0] ]))\n",
+        "print(A)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1Oaad6CjtwkT",
+        "outputId": "f72e872d-3560-4be6-c111-3420d8f36eb3"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1.38629436 1.94591015 2.07944154]\n",
+            " [1.09861229 2.30258509 2.39789527]\n",
+            " [1.38629436 1.60943791 1.94591015]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get the matrix size\n",
+        "print(\"A size:\", A.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8rqKMgCUt33L",
+        "outputId": "75f56fa8-b552-4843-88df-a9c428f2f906"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A size: (3, 3)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Print the first column of a matrix\n",
+        "print(\"First column of A:\", A[:,0].T)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cWxFdWFIt_na",
+        "outputId": "3e2dabe3-4285-4e84-85e1-63e963c23037"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "First column of A: [1.38629436 1.09861229 1.38629436]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = 10\n",
+        "\n",
+        "# Define a matrix of dimension 10 x 10 and set all elements to zero\n",
+        "A = np.zeros( (n, n) )\n",
+        "print(\"A:\\n\", A)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MnIpsISGjTxV",
+        "outputId": "2f2238ad-7608-451c-e93d-6c141cc35761"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A:\n",
+            " [[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define a matrix of dimension 10 x 10 and set all elements to one\n",
+        "B = np.ones( (n, n) )\n",
+        "print(\"B:\\n\", B)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rI9Rgue_jYC_",
+        "outputId": "6f5d997b-66e5-4790-bc24-d781deb18cf0"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "B:\n",
+            " [[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+            " [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+            " [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+            " [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+            " [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+            " [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+            " [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+            " [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+            " [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+            " [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define a matrix of dimension 2 x 2 and set all elements to random numbers in [0, 1]\n",
+        "C = np.random.rand(2, 2)\n",
+        "print(\"C:\\n\", C)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2WrUM7Y2jaoa",
+        "outputId": "ec3dd1d0-f27b-4b1f-84a3-b605f1b7db5f"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "C:\n",
+            " [[0.02212891 0.87304245]\n",
+            " [0.43260217 0.36830947]]\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## Visualise sigmoid"
@@ -38,7 +382,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "def sigmoid(z):\n",
@@ -55,9 +398,9 @@
           "height": 452
         },
         "id": "qAGWC6Q_ZLTJ",
-        "outputId": "a60c3d26-98d1-46c5-efe8-f9f924fac1db"
+        "outputId": "7460d9df-666e-4ebb-e07e-d3af2a57edda"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -82,13 +425,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "quVuRaxzXqH3",
-        "outputId": "60a79029-17a9-4301-fdd1-e7e6ae834401"
+        "outputId": "8dd983c3-d479-438d-8cc1-c9fbb06b851f"
       },
       "outputs": [
         {
@@ -130,7 +473,7 @@
       "metadata": {
         "id": "LzTioE_kZKQ2"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -142,7 +485,7 @@
       "metadata": {
         "id": "HZShpgoucuHL"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -155,9 +498,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NSR9tPSmc6pS",
-        "outputId": "25033e2a-e87c-4b6b-c9f1-c7b4405f3f0d"
+        "outputId": "09ae1a96-625c-49c8-a355-b187bc7b8eff"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,9 +561,9 @@
           "height": 255
         },
         "id": "IT6DfI5_egIA",
-        "outputId": "d37f66c9-8ad3-4868-c0f0-079178973b00"
+        "outputId": "4cc9519b-424a-4d61-a91b-e96202be68ba"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -265,7 +608,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d4258674-9faa-4e9f-9149-6a995593345f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a991dd56-5ce0-4f09-955c-d0c845d8a9a3\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -435,7 +778,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d4258674-9faa-4e9f-9149-6a995593345f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a991dd56-5ce0-4f09-955c-d0c845d8a9a3')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -487,12 +830,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d4258674-9faa-4e9f-9149-6a995593345f button.colab-df-convert');\n",
+              "        document.querySelector('#df-a991dd56-5ce0-4f09-955c-d0c845d8a9a3 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d4258674-9faa-4e9f-9149-6a995593345f');\n",
+              "        const element = document.querySelector('#df-a991dd56-5ce0-4f09-955c-d0c845d8a9a3');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -512,8 +855,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-fedfe151-2581-4b52-a740-01beffac6ab2\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-fedfe151-2581-4b52-a740-01beffac6ab2')\"\n",
+              "<div id=\"df-da2d1913-6ab0-485c-86fb-82f04b466895\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-da2d1913-6ab0-485c-86fb-82f04b466895')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -632,7 +975,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-fedfe151-2581-4b52-a740-01beffac6ab2 button');\n",
+              "        document.querySelector('#df-da2d1913-6ab0-485c-86fb-82f04b466895 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -648,7 +991,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 16
         }
       ]
     },
@@ -658,7 +1001,7 @@
       "metadata": {
         "id": "Z5iiwByme3Sc"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     }
   ]
